[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dc-sync-probe"
version = "0.1.0"
description = "CLI tool to test the DC sync pipeline end-to-end"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dc-sync-probe = "dc_sync_probe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
